--- a/app/view/base/index.html
+++ b/app/view/base/index.html
@@ -10,6 +10,7 @@
     </script>
   </head>
   <body>
-    <div id="app-container">嘿</div>
+    <div id="app-container"></div>
+    {% block page_script %} {% endblock %}
   </body>
 </html>
